...
import com.vanard.common.util.toastMsg
import com.vanard.feature.base.BaseScreen
import com.vanard.resources.R
import com.vanard.ui.theme.VShopTheme

object OnboardScreenTestTag {
    const val ONBOARD_TEXT = "onboard_text"
    const val LOGIN_BUTTON = "login_button"
    const val GUEST_BUTTON = "guest_button"
}

@Composable
fun OnboardScreen(navController: NavController, modifier: Modifier = Modifier) {
    BaseScreen(
        navController = navController,
...
