...
import com.vanard.ui.theme.VShopTextTertiary
import com.vanard.ui.theme.VShopTheme
import kotlinx.coroutines.launch

object HomeScreenTestTag {
    const val SEARCH = "search"
    const val LAZY_LIST = "lazy_list"
}

@OptIn(ExperimentalFoundationApi::class)
@Composable
fun HomeScreen(
    navController: NavController,
...
